--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -3,19 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <title>Card component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="card">
+      <div class="item"></div>
+
+      <div class="item-content">
+
+        <div class="price">
+          <button class="card_button_1 button_color"> 
+            <span>1.23</span> 
+            <i class="bi bi-star"></i>
+          </button>
+
+          <p class="value">15999</p>
+        </div>
+
+        <p class="name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </p>
+
+        <p class="catagory">laptops</p>
+
+        
+
+      </div>
+
+      <button class="main-button">add to card</button>
+      
+    </div>
   </div>
 </main>
 </body>
