--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -15,7 +15,11 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- DoubleSlider component -->
+    <div class="slider">
+      <span class="progress"></span>
+      <span class="left-slider"></span>
+      <span class="right-slider"></span>
+    </div>
   </div>
 </main>
 </body>
