--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -1,22 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Pagination component</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pagination component</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+      :root {
+        --gray-100:#EDEDED;
+        --hover-color: #7E72F2;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        
+        <div class="pagination">
+          <a href="#" class="pagination-item" data-element="nav-prev">
+            <i class="bi bi-chevron-left"></i>
+          </a>
 
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-</body>
+          <ul class="pagination-center" data-element="pagination">
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item active" data-page-index="0">1</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="1">2</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="2">3</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="3">4</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="4">5</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="5">6</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="6">7</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="7">8</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="8">9</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="9">10</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="10">11</a>
+            </li>
+            <li>
+              <a href="#" data-element="page-link" class="pagination-item" data-page-index="11">12</a>
+            </li>
+          </ul>
+
+          <a href="#" class="pagination-item" data-element="nav-next">
+            <i class="bi bi-chevron-right"></i>
+          </a>
+        </div>
+        
+      </div>
+    </main>
+  </body>
 </html>
