New version of Card

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
@@ -19,23 +20,25 @@
         <img class="card-image" src="/components/images/Rectangle.svg" alt="laptop">
       </div>
 
-      <div class="card-rating-price-container">
-        <div class="rating">
-          <p>
-            1.23
-          </p>
-          <img src="/components/images/Star 1.svg">
+      <div class="card-content">
+        <div class="card-prise-container">
+          <div class="card-rating">
+            <p>
+              1.23
+            </p>
+            <i class="bi bi-star"></i>
+          </div>
+          <p class="card-price">15999</p>
         </div>
-        <img class="card-image-star" src="/components/images/Star 1.svg">
-        <p class="price">15999</p>
-      </div>
 
-      <div class="card-name-product">
-        Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
-      </div>
 
-      <div class="card-category">
-        laptops
+        <div class="card-name-product">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+
+        <div class="card-category">
+          laptops
+        </div>
       </div>
 
       <div class="card-button-buy">
