--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,75 @@
-/* put your styles in this file */
+* {
+  box-sizing: border-box;
+}
+
+main {
+  font-family: Montserrat;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  max-width: 317px;
+  height: fit-content;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.card-image {
+  margin: 12px 12px 0;
+
+}
+
+.card-content {
+  padding: 22px 24px;
+}
+
+.card-prise-container,
+.card-rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-prise-container {
+  margin-bottom: 16px;
+}
+
+.card-rating {
+  background-color: #7e72f2;
+  border-radius: 3px;
+  color: #fff;
+  flex: 1;
+  font-size: 13px;
+  font-weight: 400;
+  max-width: 70px;
+  padding: 6px 12px;
+
+}
+
+.card-name-product {
+  margin-top: 8px;
+}
+
+.card-category {
+  margin-top: 8px;
+  font-size: 10px;
+}
+
+.card-button-buy {
+  height: 40px;
+  width: 100%;
+  background-color: #7e72f2;
+  color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
