--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,62 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+a {
+  text-decoration: none;
+  color: #000;
+}
 
-/* put your styles in this file */
+.wrapper {
+  margin: 100px auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.pagination {
+  border: 1px solid #000000;
+  width: 790px;
+  height: 205px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+.pagination-items {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background: #EDEDED;
+  transition: background 0.3s;
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pagination-items:hover {
+  background: #7E72F2;
+  color: white;
+  cursor: pointer;
+}
+
+
+.item-active {
+  background: #7E72F2;
+  color: white;
+
+}
+
+.bi-chevron-right,
+.bi-chevron-left {
+  margin: 0 15px;
+}
