Add seaching box

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -8,7 +8,7 @@
 
   <style>
     .wrapper {
-      width: 400px;
+      max-width: 400px;
       margin: 100px auto;
     }
   </style>
@@ -16,7 +16,11 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+    <div class="search-box">
+      <input type="text" class="search">
+      
+      <i class="bi bi-search icon"></i>
+    </div>
   </div>
 </main>
 </body>
