--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,28 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.search {
+    width: 100%;
+    height: 45px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0 0 0 / 14%);
+    border: none;
+    border-radius: 8px;
+    padding: 0 40px 0 12px;
+    box-sizing: border-box;
+}
+
+.search-box {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 40px;
+    font-size: 1.375rem;
+    top: 0;
+    bottom: 0;
+}
