add double-slider component

--- a/src/components/cards-list/index.html
+++ b/src/components/cards-list/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CardList component</title>
+  <title>CardsList component</title>
   <link rel="stylesheet" href="../../styles/style.css">
 
 </head>
 <body>
   <main>
-    <div class="card-list">
+    <div class="cards-list">
       <div class="container">
         <div class="row">
           <div class="col-12 col-m-6 col-l-4">
