--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@ ul {
 @import 'blocks/product-card';
 @import 'blocks/buttons';
 @import 'blocks/pagination';
-@import 'blocks/card-list';
+@import 'blocks/cards-list';
 @import 'blocks/cart';
+@import 'blocks/double-slider';
 @import 'blocks/media';
