--- a/src/sass/blocks/_cart.scss
+++ b/src/sass/blocks/_cart.scss
@@ -21,13 +21,14 @@
     top: 0;
     right: 15px;
     font-size: 30px;
-    line-height: 50px;
+    line-height: 65px;
     cursor: pointer;
   }
   &__list-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 15px;
     padding: 15px 63px 15px 25px;
     min-height: 70px;
     background: #FFFFFF;
@@ -47,7 +48,7 @@
     display: flex;
     justify-content: space-between;
     margin-left: 10px;
-    width: 70px;
+    min-width: 70px;
     span {
       font-size: 14px;
     }
