--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -15,34 +15,35 @@
 <body>
   <main>
     <div class="wrapper">
-      <!-- Card component -->
-      <div class="card-image-container">
-        <img class="card-image" src="/components/images/Rectangle.svg" alt="laptop">
-      </div>
+      <div class="card">
+        <div class="card-image-container">
+          <img class="card-image" src="/components/images/Rectangle.svg" alt="laptop">
+        </div>
 
-      <div class="card-content">
-        <div class="card-prise-container">
-          <div class="card-rating">
-            <p>
-              1.23
-            </p>
-            <i class="bi bi-star"></i>
+        <div class="card-content">
+          <div class="card-prise-container">
+            <div class="card-rating">
+              <p>
+                1.23
+              </p>
+              <i class="bi bi-star"></i>
+            </div>
+            <p class="card-price">15999</p>
           </div>
-          <p class="card-price">15999</p>
+
+
+          <div class="card-name-product">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </div>
+
+          <div class="card-category">
+            laptops
+          </div>
         </div>
 
-
-        <div class="card-name-product">
-          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        <div class="card-button-buy">
+          <p>ADD TO CARD</p>
         </div>
-
-        <div class="card-category">
-          laptops
-        </div>
-      </div>
-
-      <div class="card-button-buy">
-        <p>ADD TO CARD</p>
       </div>
     </div>
   </main>
