--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -6,18 +6,18 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
-  </div>
+    <form>
+      <div class="form-search">
+        <input type="text" placeholder="Search" class="input-search">
+        <label for="input-search"><i class="bi bi-search"></i></label>
+      </div>
+    </form>
+
 </main>
 </body>
 </html>
