--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Card component</title>
+  <link rel="stylesheet" href="../../../styles/reset.css">
   <link rel="stylesheet" href="style.css">
+
 
 </head>
 
