--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,35 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.wrapper {
+  margin: 0 auto;
+  width: 800px;
+}
+
+.form-search {
+  position: relative;
+}
+
+.input-search {
+  border: none;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
+  font-family: Montserrat, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
+  padding: 12px 20px;
+  position: relative;
+  outline: none;
+}
+
+.form-search i {
+  align-items: center;
+  color: #606060;
+  display: flex;
+  font-size: 1.375rem;
+  height: 100%;
+  position: absolute;
+  right: 0px;
+  top: 0;
+
+}
