--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,82 @@
-/* put your styles in this file */
+* {
+  box-sizing: border-box;
+}
+
+.product-card {
+  align-content: space-between;
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  width: 317px;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 10px;
+}
+
+.product-image {
+  display: flex;
+  height: 200px;
+  width: 293px;
+  justify-content: center;
+  margin-top: 12px;
+  margin-left: 12px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.product-price-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 22px;
+  font-family: 'Montserrat', sans-serif;
+}
+.product-rating {
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  color: #FFFFFF;
+  background-color: #7E72F2;
+  margin-left: 24px;
+  font-size: 13px;
+  height: 27px;
+  width: 70px;
+  border-radius: 3px;
+}
+
+.product-rating i.fa-star-o {
+  margin-top: 1px;
+}
+
+.product-price {
+  color: #2C2C2C;
+  margin-right: 27px;
+}
+.product-name {
+  color: #2C2C2C;
+  margin: 16px 26px 0 26px;
+  font-size: 14px;
+}
+
+.product-kind {
+  color: #2C2C2C;
+  font-size: 11px;
+  margin: 11px 0 22px 25px;
+}
+.product-footer {
+  background-color: #7E72F2;
+  /* color: #FFFFFF; */
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 13px;
+  padding-top: 13px;
+  cursor: pointer;
+  border-radius: 0 0 10px 10px;
+}
+.btn-primary {
+  background-color: #7e72f2;
+  color: #fff;
+  border: 0;
+  font-family: 'Montserrat', sans-serif;
+  cursor: pointer;
+}
