--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,56 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 100px auto;
+}
 
-/* put your styles in this file */
+.pagination-wrapper {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  width: 590px;
+}
+
+.left-page-wrapper {
+  width: 40px;
+}
+
+
+.page-numbers-wrapper {
+  display: flex;
+  width: 480px;
+}
+
+.right-page-wrapper {
+  width: 40px;
+}
+
+
+.page-button {
+  width: 40px;
+  height: 40px;
+  border: 0;
+  border-radius: 50%;
+  /* outline: 1px solid black; */
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+}
+
+.page-button:hover {
+  background-color: #7E72F2;
+  color: white;
+}
+.page-button:active {
+  background-color: #7E72F2;
+  color: white;
+}
+
+.first-button {
+  background-color: #7E72F2;
+  color: white;
+}
+
+.glyphicon {
+  font-size: 13px;
+}
