online-store Volodymyr_Kostiuk doubleSlider(feyk)

--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -15,7 +15,9 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- DoubleSlider component -->
+    <div class="wrapper-slider_block">
+      <input type="range" min="100" max="200" step="1" value="100" class="slider">
+    </div>
   </div>
 </main>
 </body>
