added card, card-list, filters-list, pagination, search-box 01-tasks

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -17,7 +17,25 @@
 <body>
   <main>
     <div class="wrapper">
-      <!-- Card component -->
+      <div class="card">
+        <div class="card__inner">
+          <img class="card__img" src="./img/notebook.jpg" alt="product" />
+          <div class="card__details">
+            <div class="card__rate-and-price">
+              <button class="card__product--rate">1.23&nbsp;
+                <img class="card__rate" src="./icons/star.svg" alt="icon star">
+              </button>
+              <span class="card__price">15999</span>
+            </div>
+            <h4 class="card__title">Ноутбук Acer Aspire 3 A315-57G-336G <br> (NX.HZREU.01S) Charcoal Black</h4>
+            <span class="card__info">laptops</span>
+          </div>
+        </div>
+        <div class="card__action">
+          <button class="card__btn">Add to cart
+          </button>
+        </div>
+      </div>
     </div>
   </main>
 </body>
