--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -17,6 +17,42 @@
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+    <div class="pagination">
+      <a href="#"><img src="icons/chevron-left.svg"></a>
+      <ul class="pagination__options">
+        <li>
+          <a href="#" class="active">1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">4</a>
+        </li>
+        <li>
+          <a href="#">5</a>
+        </li>
+        <li>
+          <a href="#">6</a>
+        </li>
+        <li>
+          <a href="#">7</a>
+        </li>
+        <li>
+          <a href="#">8</a>
+        </li>
+        <li>
+          <a href="#">9</a>
+        </li>
+        <li>
+          <a href="#">10</a>
+        </li>
+      </ul>
+      <a href="#"><img src="icons/chevron-right.svg"></a>
+    </div>
   </div>
 </main>
 </body>
