--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -17,6 +17,10 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="search-bar">
+      <input type="text" placeholder="Search" arial-label="search" />
+      <button class="search-bar__btn"><img src="icons/search.svg" alt="search"></button>
+    </div>
   </div>
 </main>
 </body>
