--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -16,6 +16,25 @@
 <main>
   <div class="wrapper">
     <!-- FiltersList component -->
+    <h4 class="filters__title">Category</h4>
+    <ul class="filters__list">
+      <li>
+        <input class="custom-checkbox" type="checkbox" name="category" id="category-1">
+        <label for="category-1">
+          <span class="inner-label">
+            <span>Cell Phones</span>
+          </span>
+        </label>
+      </li>
+      <li>
+        <input class="custom-checkbox" type="checkbox" name="category" id="category-2" checked>
+        <label for="category-2">
+          <span class="inner-label">
+            <span>Computers & Tablets</span>
+          </span>
+        </label>
+      </li>
+      <li>
   </div>
 </main>
 </body>
