--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,32 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+
+.search-bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 28px 0;
+  position: relative;
+}
+
+.search-bar input[type="text"] {
+  width: 100%;
+  padding: 16px;
+  border-radius: 8px;
+  border: none;
+  background-color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.search-bar__btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 17px;
+  background-color: transparent;
+  border: none;
+}
