--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     .wrapper {
       width: 800px;
@@ -16,6 +16,22 @@
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+    <ul class="pagination">
+      <li><a href="#"><</a></li>
+      <li class="active"><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">4</a></li>
+      <li><a href="#">5</a></li>
+      <li><a href="#">6</a></li>
+      <li><a href="#">7</a></li>
+      <li><a href="#">8</a></li>
+      <li><a href="#">9</a></li>
+      <li><a href="#">10</a></li>
+      <li><a href="#">11</a></li>
+      <li><a href="#">12</a></li>
+      <li><a href="#">></a></li>
+  </ul>
   </div>
 </main>
 </body>
