--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,4 +23,5 @@ ul {
 @import 'blocks/cards-list';
 @import 'blocks/cart';
 @import 'blocks/double-slider';
+@import 'blocks/filters-list';
 @import 'blocks/media';
