--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <title>DoubleSlider component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/online-store/src/components/double-slider/01-css-task/style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- DoubleSlider component -->
+
+    <div class="vector1">
+        <img src="/online-store/src/components/double-slider/01-css-task/Vector1.svg" alt="Vector1">
+      </div>
+    <div class="Rectangle">
+      <div class="pr-1">100</div>
+      <div class="pr-2">200</div>
+    </div>
+    <div class="vector2">
+        <img src="/online-store/src/components/double-slider/01-css-task/Vector2.svg" alt="Vector2">
+      </div>
+
+
+
   </div>
 </main>
 </body>
