--- a/src/components/double-slider/01-css-task/style.css
+++ b/src/components/double-slider/01-css-task/style.css
@@ -1,1 +1,56 @@
 /* put your styles in this file */
+.wrapper {
+  width: 400px;
+  height: 100px;
+  margin: 100px auto;
+  display:flex;
+  align-content: flex-end;
+  justify-content: center;
+  align-items: center;
+  background: #ffefd6
+
+
+
+}
+
+
+.vector1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+.vector2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.Rectangle {
+  width: 212px;
+  height: 4px;
+  display: flex;
+  background: #7E72F2;
+}
+
+
+.pr-1 {
+  margin-top: 11px;
+  margin-left: -11px;
+  font-size: 11px;
+}
+
+.pr-2{
+  margin-top: 11px;
+  margin-left: 201px;
+  font-size: 11px;
+
+
+}
+
+
+
+
