some changes + card list

--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,17 +4,214 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-
-    }
-  </style>
+  <link rel="stylesheet" href="../../card/01-css-task/style.css">
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- CardsList component -->
+  <div class="wrapper-1">
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>  
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>  
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>  
+    <div class="card-container col-m col-s">
+      <div class="card">
+        <div class="item"></div>
+  
+        <div class="item-content">
+  
+          <div class="price">
+            <button class="card_button_1 button_color"> 
+              <span>1.23</span> 
+              <i class="bi bi-star"></i>
+            </button>
+  
+            <p class="value">15999</p>
+          </div>
+  
+          <p class="name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </p>
+  
+          <p class="catagory">laptops</p>
+  
+          
+  
+        </div>
+  
+        <button class="main-button">add to card</button>
+        
+      </div>
+    </div>
   </div>
 </main>
 </body>
