--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -17,8 +17,7 @@
 <main>
   <div class="wrapper">
     <div class="search-box">
-      <input type="text" class="search">
-      
+      <input type="text" class="search" placeholder="Search">
       <i class="bi bi-search icon"></i>
     </div>
   </div>
