--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 .wrapper {
-    width: 400px;
+    max-width: 400px;
     margin: 100px auto;
   }
   
@@ -14,6 +14,7 @@
 .card {
   display: flex;
   flex-direction: column;
+  width: 100%;
   margin: 0 auto;
   align-content: space-between;
   height: 394px;
