--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,26 @@
-/* put your styles in this file */
+.wrapper-1 {
+    max-width: 990px;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card-container {
+    width: calc 100%;
+    height: 400px;
+}
+
+
+@media (min-width: 576px) {
+    .col-s {
+        width: calc(100% / 12 * 5.88);
+    }
+}
+
+@media (min-width: 768px) {
+    .col-m {
+        width: calc(100% / 12 * 3.88);
+    }
+}
