--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Pagination component</title>
+  <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+
+  <main>
+    <div class="wraper">
+      <!-- Pagination component -->
+      <ul class="pagination_list">
+        <li class="pag_page">
+          <a href="#prev" class="pag_link">
+            <i class="bi bi-chevron-left"></i>
+          </a>
+        </li>
+        <li class="pag_page"><a href="#" class="pag_link">1</a></li>
+        <li class="pag_page"><a href="#" class="pag_link active">2</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">3</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">4</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">5</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">6</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">7</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">8</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">9</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">10</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">11</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">12</a></li>
+        <li class="pag_page">
+          <a href="#prev" class="pag_link">
+            <i class="bi bi-chevron-right"></i>
+          </a>
+        </li>
+      </ul>
+  </main>
+
 </body>
+
 </html>
