--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,48 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+.wraper {
+  display: flex;
+  justify-content: center;
+  --accent-color: #7E72F2;
+  --main-font-color: #2c2c2c;
+}
 
-/* put your styles in this file */
+.pagination_list {
+  display: flex;
+  justify-content: center;
+  margin: 15px auto;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--main-font-color);
+  list-style-type: none;
+
+}
+
+.pag_page:first-child {
+  margin-right: 15px;
+}
+
+.pag_page:last-child {
+  margin-left: 15px;
+}
+
+.pag_link {
+  align-items: center;
+  background-color: #ededed;
+  border-radius: 20px;
+  color: var(--main-font-color);
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  transition: .3s;
+  width: 40px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.active {
+  pointer-events: none;
+  color: white;
+  background-color: var(--accent-color);
+}
+.pag_link:hover {
+  color: white;
+  background-color: var(--accent-color);
+}
