added button cart and input search and cardlist

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -14,7 +14,6 @@
         <!-- Card component -->
         <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
           <div class="prodact-image">
-            <img src="./image/rectangle.png" alt="Image prodact">
           </div>
           <div class="prodact-content">
             <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
@@ -24,7 +23,7 @@
               </div>
               <div class="prodact-price font-size-15">15999</div>
             </div>
-              <h5 class="font-size-13">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+              <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
               <div class="prodact-name font-size-10">laptops</div>
           </div>
           <div class="prodact-add-to-card prodact-button-color">
