--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -9,6 +9,10 @@
 <main>
   <div id="root">
     <!-- Cart component -->
+    <button class="cart-button">
+      <i class="bi bi-cart"></i>
+      <span class="cart-button-span">cart</span>
+    </button>
   </div>
 </main>
 </body>
