--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -5,7 +5,7 @@
   <title>Pagination component</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="pagination-style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -15,18 +15,18 @@
     <nav class="card-pagination font-montserrat-400">
       <a class="panigation-arrow-left" href="#"><i class="bi bi-chevron-left"></i></a>
       <ul class="pagination-block ">
-        <li class="pagination-item active"><a href="#" >1</a></li>
-        <li class="pagination-item"><a href="#" >2</a></li>
-        <li class="pagination-item "><a href="#" >3</a></li>
-        <li class="pagination-item"><a href="#" >4</a></li>
-        <li class="pagination-item"><a href="#" >5</a></li>
-        <li class="pagination-item"><a href="#" >6</a></li>
-        <li class="pagination-item"><a href="#" >7</a></li>
-        <li class="pagination-item"><a href="#" >8</a></li>
-        <li class="pagination-item"><a href="#" >9</a></li>
-        <li class="pagination-item"><a href="#">10</a></li>
-        <li class="pagination-item"><a href="#">11</a></li>
-        <li class="pagination-item"><a href="#">12</a></li>
+        <li class="pagination-item active"><a href="#" data-page-index="0">1</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="1">2</a></li>
+        <li class="pagination-item "><a href="#" data-page-index="2">3</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="3">4</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="4">5</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="5">6</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="6">7</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="7">8</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="8">9</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="9">10</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="10">11</a></li>
+        <li class="pagination-item"><a href="#" data-page-index="11">12</a></li>
       </ul>
       <a class="panigation-arrow-right"href="#"><i class="bi bi-chevron-right"></i></a>
     </nav>
