--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
+
     <!-- SearchBox component -->
+  <form action="#" class="os-form-input-search font-montserrat-400">
+      <input type="text" name="search" id="os-input-search" placeholder="Search">
+      <label for="os-input-search" class="label-input-search"><i class="bi bi-search"></i></label> 
+    </form>
   </div>
 </main>
 </body>
