--- a/grid/grid.css
+++ b/grid/grid.css
@@ -11,8 +11,7 @@
 
 div[class^='col-'] {
   box-sizing: border-box;
-  border: 1px solid red;
-  padding-left: 1rem;
+  padding: 0.625rem ;
 }
 
 .col-1 {
