--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -3,18 +3,218 @@
 <head>
   <meta charset="UTF-8" />
   <title>CardsList component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../../card/01-css-task/style.css">
+  <link rel="stylesheet" href="../../../../grid/grid.css">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- CardsList component -->
+    <div class="card-list">
+      <div class="row">
+        <div class="col-12 col-m-6 col-l-4 ">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+              <div class="prodact-image">
+              </div>
+              <div class="prodact-content">
+                <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                  <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                    <span >1.23</span>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <div class="prodact-price font-size-15">15999</div>
+                </div>
+                  <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                  <div class="prodact-name font-size-10">laptops</div>
+              </div>
+              <div class="prodact-add-to-card prodact-button-color">
+                <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+              </div>
+            </div> 
+          </div>
+        </div>
+        <div class="col-12 col-m-6 col-l-4">
+          <div class="prodact-card">
+            <div class="prodact-card prodact-d-flex-jc-space-b font-montserrat-400">
+            <div class="prodact-image"></div>
+            <div class="prodact-content">
+              <div class="prodact-price-wrapper prodact-d-flex-jc-space-b">
+                <div class="prodact-rating prodact-button-color prodact-d-flex-jc-space-b font-size-13">
+                  <span >1.23</span>
+                  <i class="bi bi-star"></i>
+                </div>
+                <div class="prodact-price font-size-15">15999</div>
+              </div>
+                <h5 class="font-size-13 font-montserrat-400">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+                <div class="prodact-name font-size-10">laptops</div>
+            </div>
+            <div class="prodact-add-to-card prodact-button-color">
+              <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">ADD TO CARD</button>
+            </div>
+          </div> 
+        </div>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 </body>
