--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,27 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+:root {
+    --purpure-100:#7E72F2;
+  }
+.cart-button{
+    box-sizing: border-box;
+    width:7.5rem;
+    height: 2.25rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 0.875rem;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    border-radius: 3px;
+    background:var(--purpure-100) ;
+    color:white;
+    outline: none;
+    border:none;
+}
+.bi.bi-cart{
+    font-size:0.9375rem;
+}
+.cart-button-span{
+    text-transform:uppercase;
+    padding: 0 5px;
+}
