--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,40 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.wrapper{
+    max-width:990px;
+    margin: 0 auto;
+
+}
+.font-montserrat-400{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+  }
+.os-form-input-search{
+    width:100%;
+    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    color:#606060;
+}
+input[name="search"]{
+    width:100%;
+    padding: 13px 70px 14px 20px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
+    font-size: 0.875rem;
+}
+input[name="search"]::placeholder{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+}
+.label-input-search{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    position: absolute;
+    top:0;
+    right:40px;
+}
