--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- SearchBox component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <!-- SearchBox component -->
+      <div class="search_box">
+        <input id="search-input" type="text" data-element="search" placeholder="Search">
+        <i class="bi bi-search"></i>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
