--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,19 +4,46 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- FiltersList component -->
-  </div>
-</main>
+
+<h1>Category</h1>
+  <label class="container">Monitors
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Laptops
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Video Cards
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Gaming keyboards
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Computer mouse
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">SSD
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Sound Cards
+    <input type="checkbox">
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Ram
+      <input type="checkbox">
+      <span class="checkmark"></span>
+  </label>
 </body>
 </html>
