add search-box and several fixes

--- a/src/sass/blocks/_product-card.scss
+++ b/src/sass/blocks/_product-card.scss
@@ -35,6 +35,7 @@
   &__title {
     margin-top: 16px;
     font-size: 13px;
+    font-weight: 400;
     line-height: 16px;
     color: #2C2C2C;
   }
