--- a/src/sass/blocks/_pagination.scss
+++ b/src/sass/blocks/_pagination.scss
@@ -39,6 +39,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 14px;
     @include circle;
     &:first-child {
       background: $main-color;
