--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,58 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/icomoon.eot?243j1o");
+  src: url("../fonts/icomoon.eot?243j1o#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?243j1o") format("truetype"), url("../fonts/icomoon.woff?243j1o") format("woff"), url("../fonts/icomoon.svg?243j1o#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-cart:before {
+  content: "\e900";
+  color: #fff;
+}
+
+.icon-close:before {
+  content: "\e901";
+}
+
+.icon-mark:before {
+  content: "\e902";
+  color: #fff;
+}
+
+.icon-minus:before {
+  content: "\e903";
+}
+
+.icon-plus:before {
+  content: "\e904";
+}
+
+.icon-search:before {
+  content: "\e905";
+}
+
+.icon-star:before {
+  content: "\e906";
+  color: #fff;
+}
+
 .container {
   margin: 0 auto;
   max-width: 100%;
@@ -213,63 +268,9 @@
   }
 }
 
-@font-face {
-  font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?243j1o");
-  src: url("../fonts/icomoon.eot?243j1o#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?243j1o") format("truetype"), url("../fonts/icomoon.woff?243j1o") format("woff"), url("../fonts/icomoon.svg?243j1o#icomoon") format("svg");
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-cart:before {
-  content: "\e900";
-  color: #fff;
-}
-
-.icon-close:before {
-  content: "\e901";
-}
-
-.icon-mark:before {
-  content: "\e902";
-  color: #fff;
-}
-
-.icon-minus:before {
-  content: "\e903";
-}
-
-.icon-plus:before {
-  content: "\e904";
-}
-
-.icon-search:before {
-  content: "\e905";
-}
-
-.icon-star:before {
-  content: "\e906";
-  color: #fff;
-}
-
 * {
-  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
   margin: 0;
 }
 
@@ -277,6 +278,10 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+body {
+  background-color: #f9f9f9;
 }
 
 .product-card {
@@ -322,6 +327,7 @@ ul {
 .product-card__title {
   margin-top: 16px;
   font-size: 13px;
+  font-weight: 400;
   line-height: 16px;
   color: #2C2C2C;
 }
@@ -413,6 +419,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 14px;
   width: 40px;
   height: 40px;
   border-radius: 100%;
@@ -599,17 +606,17 @@ input[type="range"]::-ms-track {
 }
 
 .slider__thumb_right::-webkit-slider-thumb {
-  margin-left: 5px;
+  margin-left: 6px;
   transform: rotate(180deg);
 }
 
 .slider__thumb_right::-moz-range-thumb {
-  margin-left: 5px;
+  margin-left: 6px;
   transform: rotate(180deg);
 }
 
 .slider__thumb_right::-ms-thumb {
-  margin-left: 5px;
+  margin-left: 6px;
   transform: rotate(180deg);
 }
 
@@ -667,6 +674,33 @@ input[type="checkbox"]:checked {
 
 input[type="checkbox"]:checked:after {
   display: block;
+}
+
+.search-box {
+  position: relative;
+}
+
+.search-box input {
+  width: 100%;
+  height: 45px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  background: #FFFFFF;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 5px 70px 5px 15px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.search-box:after {
+  content: '\e905';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 35px;
+  font-family: 'icomoon';
+  font-size: 20px;
 }
 
 @media (min-width: 576px) {
