--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
 @import 'libs/fonts';
 
 @import 'libs/flex-grid';
@@ -23,6 +23,7 @@ body {
   background-color: #f9f9f9;
 }
 
+@import 'blocks/header';
 @import 'blocks/product-card';
 @import 'blocks/buttons';
 @import 'blocks/pagination';
